<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuGames"
        android:enabled="true"
        android:icon="@mipmap/marker_game"
        android:title="@string/games"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuInformation"
        android:enabled="true"
        android:icon="@mipmap/marker_information"
        android:title="@string/games"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menuRoute"
        android:title="@string/routes"
        android:enabled="true"
        android:icon="@drawable/ic_list_white_48dp"
        app:showAsAction="ifRoom" >

        <menu>
            <item android:id="@+id/menuAlcazaba"
                android:title="@string/menuAlcazaba" />
            <item android:id="@+id/menuJardines"
                android:title="@string/menuJardines" />
            <item
                android:id="@+id/gametest"
                android:title="@string/developer_room" />
        </menu>
    </item>
</menu>
